--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>Hello World</p>
+<p>Watson Sample Sites Directory</p>
+<table>
+  <tr>
+    <td><strong>Site Name</strong></td>
+    <td><strong>Description (lang, db, etc)</strong></td>
+    <td><strong>Link</strong></td>
+  </tr>
+    <td>Ecommerce Sample</td>
+    <td>Written with PHP, MySQL database, JavaScript</td>
+    <td>link to start page</td>
+</table>
