--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p>Watson Sample Sites Directory</p>
-<table>
+<table style="border: solid">
   <tr>
     <td><strong>Site Name</strong></td>
     <td><strong>Description (lang, db, etc)</strong></td>
