--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<html>
 <p>Watson Sample Sites Directory</p>
-<table style="border: solid">
+<table style="border: 1px solid black">
   <tr>
     <td><strong>Site Name</strong></td>
     <td><strong>Description (lang, db, etc)</strong></td>
@@ -9,3 +10,4 @@
     <td>Written with PHP, MySQL database, JavaScript</td>
     <td>link to start page</td>
 </table>
+</html>
