--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
-<p>Watson Sample Sites Directory</p>
-<table style="border: 1px solid black">
-  <tr>
-    <td><strong>Site Name</strong></td>
-    <td><strong>Description (lang, db, etc)</strong></td>
-    <td><strong>Link</strong></td>
-  </tr>
-    <td>Ecommerce Sample</td>
-    <td>Written with PHP, MySQL database, JavaScript</td>
-    <td>link to start page</td>
-</table>
+  <head>
+    <style>table, tr, td {border: 1px solid black}</style>
+  </head>
+  <body>
+    <p>Watson Sample Sites Directory</p>
+    <table>
+      <tr>
+        <td><strong>Site Name</strong></td>
+        <td><strong>Description (lang, db, etc)</strong></td>
+        <td><strong>Link</strong></td>
+      </tr>
+        <td>Ecommerce Sample</td>
+        <td>Written with PHP, MySQL database, JavaScript</td>
+        <td>link to start page</td>
+    </table>
+  </body>
 </html>
