--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <style>table, tr, td {border: 1px solid black}</style>
+    <style>
+      table, tr, td {border: 1px solid black;}
+    </style>
   </head>
   <body>
     <p>Watson Sample Sites Directory</p>
