--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,10 @@
 <html>
-  <p>Test links page</p>
+    <head>
+    <style>
+      table, tr, td {border: 1px solid black;}
+    </style>
+  </head>
+  <body>
+    <p>Test links page</p>
+  </body>
 </html>
