--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
         <td><strong>Description (lang, db, etc)</strong></td>
         <td><strong>Link</strong></td>
       </tr>
+      <tr>
+        <td>Resume</td>
+        <td><a href="http://bentonwatson.github.io/SampleProjects/resume.html" target="_blank"></a>view here</a></td>
+      </tr>
+      <tr>
         <td>Ecommerce Sample</td>
         <td>Written with PHP, MySQL database, JavaScript</td>
         <td>link to start page</td>
+      </tr>
+        
     </table>
   </body>
 </html>
