--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </tr>
       <tr>
         <td>Resume</td>
-        <td><a href="http://bentonwatson.github.io/SampleProjects/resume.html" target="_blank"></a>view here</a></td>
+        <td><a href="http://bentonwatson.github.io/SampleProjects/resume.html" target="_blank">view here</a></td>
       </tr>
       <tr>
         <td>Ecommerce Sample</td>
