--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
       <tr>
         <td>Resume</td>
         <td><a href="http://bentonwatson.github.io/SampleProjects/resume.html" target="_blank">view here</a></td>
+        <td><a href="http://bentonwatson.github.com" target="_blank">Github Repository</a>contains code for projects with *</td>
       </tr>
       <tr>
         <td>Ecommerce Sample</td>
         <td>Written with PHP, MySQL database, JavaScript</td>
-        <td>link to start page</td>
+        <td>Baby Site</td>
       </tr>
-        
+      <tr>
+        <td>* Static Content Site</td>
+        <td>HTML, CSS, and JavaScript</td>
+        <td>Wordly Eats</td>
+      </tr>
+      <tr></tr>  
     </table>
   </body>
 </html>
