--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
       <tr>
         <td>Resume</td>
         <td><a href="http://bentonwatson.github.io/SampleProjects/resume.html" target="_blank">view here</a></td>
-        <td><a href="http://bentonwatson.github.com" target="_blank">Github Repository</a>contains code for projects with *</td>
+        <td><a href="http://bentonwatson.github.com" target="_blank">Github Repository</a>contains code for projects</td>
       </tr>
       <tr>
         <td>Ecommerce Sample</td>
-        <td>Written with PHP, MySQL database, JavaScript</td>
+        <td>Written with PHP, HTML, JavaScript Apache, MySQL</td>
         <td>Baby Site</td>
       </tr>
       <tr>
-        <td>* Static Content Site</td>
+        <td>Static Content Site</td>
         <td>HTML, CSS, and JavaScript</td>
         <td>Wordly Eats</td>
       </tr>
-      <tr></tr>  
+      <tr>
+        <td>Web Application</td>
+        <td>Java, JSP, Apache Tomcat, MySQL</td>
+        <td>Contacts Saver</td>
+      </tr>  
     </table>
   </body>
 </html>
