--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <tr>
         <td>Resume</td>
         <td><a href="http://bentonwatson.github.io/SampleProjects/resume.html" target="_blank">view here</a></td>
-        <td><a href="https://github.com/bentonwatson.git" target="_blank">Github Repository</a><br>contains code for projects</td>
+        <td><a href="https://github.com/bentonwatson/SampleProjects.git" target="_blank">Github Repository</a></td>
       </tr>
       <tr>
         <td>Ecommerce Sample</td>
