--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <tr>
         <td>Static Content Site</td>
         <td>HTML, CSS, and JavaScript</td>
-        <td>Wordly Eats</td>
+        <td><a href="http://bentonwatson.github.io/SampleProjects/StaticSiteHome.html" target="_blank">Wordly Eats</td>
       </tr>
       <tr>
         <td>Web Application</td>
