--- a/StaticSiteHome.html
+++ b/StaticSiteHome.html
@@ -6,8 +6,8 @@
 		<title>
 			home page
 		</title> 
-		<script type="text/javascript" src="scripts.js"></script>
-		<link onload="styleHold()" id="style" type="text/css" rel="Stylesheet" href="style1.css" media="screen"></link>
+		<script type="text/javascript" src="http://bentonwatson.github.io/SampleProjects/scripts.js"></script>
+		<link onload="styleHold()" id="style" type="text/css" rel="Stylesheet" href="http://bentonwatson.github.io/SampleProjects/style1.css" media="screen"></link>
 		
 		
 	</head>
@@ -20,11 +20,11 @@
 				<td id="chooseLine" colspan="5">Choose the TimeZone you would like to explore!</td>
 			</tr>
 			<tr>
-				<td class="zoneName" ><a href="alaska.html"/>Alaskan</td>
-				<td class="zoneName"><a href="pacific.html"/>Pacific</td>
-				<td class="zoneName"><a href="mountain.html"/>Mountain</td>
-				<td class="zoneName"><a href="central.html"/>Central</td>
-				<td class="zoneName"><a href="eastern.html"/>Eastern</td>
+				<td class="zoneName" ><a href="http://bentonwatson.github.io/SampleProjects/alaska.html"/>Alaskan</td>
+				<td class="zoneName"><a href="http://bentonwatson.github.io/SampleProjects/pacific.html"/>Pacific</td>
+				<td class="zoneName"><a href="http://bentonwatson.github.io/SampleProjects/mountain.html"/>Mountain</td>
+				<td class="zoneName"><a href="http://bentonwatson.github.io/SampleProjects/central.html"/>Central</td>
+				<td class="zoneName"><a href="http://bentonwatson.github.io/SampleProjects/eastern.html"/>Eastern</td>
 			</tr>
 			<tr>
 				<td class="imgrow" rowspan="1"><a title="The Alaskan Zone includes only the state of Alaska." class="tooltip"><img src="images/AL_img.jpg" alt="Alaska"></img></a></td>
@@ -40,7 +40,7 @@
 				<td class="imgrow" rowspan="1"><a title="The Hawaiian Zone includes only the state of Hawaii" class="tooltip"><img src="images/HI_img.jpg" alt="Hawaii"></img></a></td>
 			</tr>
 		</table>
-		<p id="foot"><a class="inText" href="sitemap.html">Site Map</a>	<a class="inText" href="register.html">Register</a>	<a class="inText" href="contactus.html">Contact Us</a></p>
+		<p id="foot"><a class="inText" href="http://bentonwatson.github.io/SampleProjects/sitemap.html">Site Map</a>	<a class="inText" href="http://bentonwatson.github.io/SampleProjects/register.html">Register</a>	<a class="inText" href="http://bentonwatson.github.io/SampleProjects/contactus.html">Contact Us</a></p>
 	</body>
 
 </html>
